6715633: when matching a memory node the adr_type should not change

Verify the adr_type of a mach node was not changed

Reviewed-by: rasbold, never